--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     implementation(name:'HERE-sdk', ext:'aar')
+
+    implementation 'com.github.vlonjatg:progress-activity:2.0.5'
+
 }
